fixed clipping

--- a/TrafficBuddy/app/assets/stylesheets/main.css.scss
+++ b/TrafficBuddy/app/assets/stylesheets/main.css.scss
@@ -125,13 +125,13 @@ body {
 }
 
 .social-share-button-twitter{
-  height: 16px;
-  width: 32px;
+  height: 16px !important;
+  width: 32px !important;
   background: url(newtwitter.png) no-repeat !important;
 }
 
 .social-share-button-facebook{
-  height: 16px;
-  width: 32px;
+  height: 16px !important;
+  width: 32px !important;
   background: url(newfacebook.png) no-repeat !important;
 }
